# Home-Credit-Default-Risk-Prediction

./: .dockerignore  Dockerfile  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: submission_v6.csv  try.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/: api.py  config.py  data.py  features.py
src/modeling/: predict.py  train.py
